force-app/main/default/objects/Default_Task_Value__c/Default_Task_Value__c.object-meta.xml
<CustomObject>
    <description>Used by the Event trigger to determine what default values to assign to tasks that are created as an outcome to B2B Meetings</description>
    <label>Default Task Value</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Task Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>