force-app/main/default/objects/Default_Task_Value__c/fields/Default_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Default_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the user who will be assigned the task upon creation in the Event Trigger</description>
    <label>Default Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Default_Task_Assignees</relationshipName>
    <type>Lookup</type>
</CustomField>