force-app/main/default/objects/Default_Task_Value__c/fields/Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Offset__c</fullName>
    <description>The Event Trigger uses this field to add xx days to the current date on the Due Date</description>
    <label>Due Date Offset</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>