force-app/main/default/objects/Default_Task_Value__c/fields/Remerchandising_Activity__c.field-meta.xml
<CustomField>
    <fullName>Remerchandising_Activity__c</fullName>
    <description>This list should mirror the &quot;Village Activities&quot; multi pick-list on Activity</description>
    <label>Remerchandising Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bicester - Amendment</fullName>
            </value>
            <value>
                <fullName>Bicester - Downsize</fullName>
            </value>
            <value>
                <fullName>Bicester - Follow Up Action</fullName>
            </value>
            <value>
                <fullName>Bicester - New Contract</fullName>
            </value>
            <value>
                <fullName>Bicester - Pop Up</fullName>
            </value>
            <value>
                <fullName>Bicester - Rebrand</fullName>
            </value>
            <value>
                <fullName>Bicester - Relocation</fullName>
            </value>
            <value>
                <fullName>Bicester - Renewal</fullName>
            </value>
            <value>
                <fullName>Bicester - Shop Refit</fullName>
            </value>
            <value>
                <fullName>Bicester - Termination</fullName>
            </value>
            <value>
                <fullName>Bicester - Upsize</fullName>
            </value>
            <value>
                <fullName>Fidenza - Amendment</fullName>
            </value>
            <value>
                <fullName>Fidenza - Downsize</fullName>
            </value>
            <value>
                <fullName>Fidenza - Follow Up Action</fullName>
            </value>
            <value>
                <fullName>Fidenza - New Contract</fullName>
            </value>
            <value>
                <fullName>Fidenza - Pop Up</fullName>
            </value>
            <value>
                <fullName>Fidenza - Rebrand</fullName>
            </value>
            <value>
                <fullName>Fidenza - Relocation</fullName>
            </value>
            <value>
                <fullName>Fidenza - Renewal</fullName>
            </value>
            <value>
                <fullName>Fidenza - Shop Refit</fullName>
            </value>
            <value>
                <fullName>Fidenza - Termination</fullName>
            </value>
            <value>
                <fullName>Fidenza - Upsize</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Amendment</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Downsize</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Follow Up Action</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - New Contract</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Pop Up</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Rebrand</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Relocation</fullName>
            </value>
            <value>
                <fullName>Ingolstadt - Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>