force-app/main/default/objects/Default_Task_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Remerchandising_Activity__c</columns>
    <columns>Default_Assignee__c</columns>
    <columns>Due_Date_Offset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>